fixed the footer kind of, got some of the spacing done and also the sizing of the fonts and icons, just need to tweek the spacing

--- a/frontend/src/components/layout/footer/footer.module.css
+++ b/frontend/src/components/layout/footer/footer.module.css
@@ -1,8 +1,7 @@
-/* ----------------------Footer----------------------*/
-/* https: //www.youtube.com/watch?v=YOb67OKw62s i.e. Responsive Footer Design using Html & Css by "The WebShala" */
-
-.container1 {
+/* ----------------------Footer---------------------- https: //www.youtube.com/watch?v=YOb67OKw62s i.e. Responsive Footer Design using Html & Css by "The WebShala" */
+.footer {
     display: flex;
+    position: relative;
     background-color: black;
     width: 100%;
     height: 80vh;
@@ -12,32 +11,23 @@
     flex-direction: column;
     justify-content: center;
 }
-
 .logoLine {
     display: flex;
-    z-index: 1001;
-    align-items: center;
-    top: 0;
-    height: 4rem;
+    justify-content: center;
+    align-items: flex-end;
     width: 100%;
+    height: 10vh;
+    min-height: 3.7rem;
 }
-
 .logoContainer { 
-    width: 100%;
     display: flex;
     flex-direction: row;
-    color: var(--white);
-    height: 3rem;
     align-items: center;
-    padding: 0;
+    color: var(--white);
     width: 90%;
+    height: 7;
     max-width: 1740px;
-    margin-top: 0%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: auto;
 }
-
 .companyName{
     font-family: Montserrat;
     font-size: 2rem;
@@ -45,46 +35,23 @@
     margin-left: 45px;
     font-weight: 100;
 }
-
 .Logo {
     display: flex;
     height: 3.7rem;
     width: 3.57rem;
 }
-
 .Logo:hover {
     cursor: pointer;
     transform: rotate(180deg);
     animation: around .18s ease-in forwards;
 }
-
-.spacer1{
-    width: 100%;
-    height: 100px;
-}
-.spacer2{
-    width: 100%;
-    height: 100px;
-}
 /*========== Animation ==========*/
 @keyframes around {
-    0% {
-        transform: rotate(22.5deg);
-    }
-
-    33% {
-        transform: rotate(45deg);
-    }
-
-    66% {
-        transform: rotate(67.5deg);
-    }
-
-    100% {
-        transform: rotate(90deg);
-    }
+    0% {transform: rotate(22.5deg);}
+    33% {transform: rotate(45deg);}
+    66% {transform: rotate(67.5deg);}
+    100% {transform: rotate(90deg);}
 }
-
 /* Devices under 1011px */
 @media (max-width: 1011px) {
     .logoContainer{
@@ -92,17 +59,7 @@
         justify-content: space-between;
     }
 }
-
-.footer {
-    box-sizing: border-box;
-    background-color: var(--black);
-    width: 64%;
-    margin-left: 18%;
-    margin-right: 18%;
-}
-
 /*========== Media Queries ==========*/
-
 /* Devices over 2400px */
 @media (min-width: 2400px) {
     .footer {
@@ -110,62 +67,62 @@
         margin: auto;
     }
 }
-
 /* Devices over 2400px */
 @media (max-width: 997px) {
     .footer {
         padding-left: 5%;
     }
 }
-
 /* Devices over 550px */
 @media (max-width: 550px) {
     .footer {
         padding-left: 15%;
-
     }
 }
-
 /*====================================*/
+.container1 {
+    box-sizing: border-box;
+    background-color: var(--black);
+    width: 64%;
+    height: 70vh;
+    margin-left: 18%;
+    margin-right: 18%;
+}
 .container2 {
     display: flex;
     justify-content: center;
     flex-direction: column;
     max-width: 100%;
     margin: auto;
-    
+    height: 65vh;
+    font-family: Roboto;
 }
-
 .linksRow {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-
 .footer ul {
     list-style: none;
     padding: 0px;
     min-width: 20%;
 }
-
 .footer_col {
     display: block;
     width: 106px;
     text-align: left;
-    font-family: Roboto;
 }
-
 .footer_col h4 {
     font-size: 18px;
     color: #ffffff;
     text-transform: capitalize;
     margin-bottom: 30px;
-    font-weight: 500;
+    font-weight: bolder;
     position: relative;
     margin-bottom: 20px;
 }
-
-.footer_col h4::before {
+/* Creates the line below the header */
+.footer_col h4::before { /*Pseudo-elements are commonly used to add decorative elements, such as arrows, icons, or lines, or to create effects that enhance the visual appearance of an element. They are particularly useful when you want to add small visual enhancements to an element without modifying the actual HTML structure. */
     content: '';
     position: absolute;
     left: 0;
@@ -175,72 +132,55 @@
     box-sizing: border-box;
     width: 50px;
 }
-
 .footer_col ul li:not(:last-child) {
     margin-bottom: 10px;
 }
-
 .footer_col ul li:last-child {
     margin-bottom: 30px;
 }
-
 .footer_col ul li a {
     font-size: 16px;
     text-transform: capitalize;
     text-decoration: none;
     font-weight: 300;
-    /*Dark-Mode Difference*/
-    color: #bbbbbb;
+    color: var(--gray);
     display: block;
     transition: all 0.3s ease;
     min-width: 140px;
 }
-
 .footer_col ul li a:hover {
     color: #0066FF;
     padding-left: 8px;
 }
 
+/*======    SOCIAL    =========================*/
 .socialRow{
-    width: 100%;    
-}
-
-.social_col{
     display: flex;
-    text-align: center;
+    height: 5vh;
+    width: 100%;
     justify-content: center;
-}
-
-.social_col ul li a {
-    font-size: 16px;
-    text-transform: capitalize;
-    text-decoration: none;
-    font-weight: 300;
-    color: #bbbbbb;
-    display: block;
-    transition: all 0.3s ease;
-    min-width: 140px;
-}
-
-.social_col ul li a:hover {
-    color: #0066FF;
-    padding-left: 8px;
 }
 
 .social_links a {
     display: inline-block;
     height: 40px;
     width: 40px;
-    background-color: rgba(255, 255, 255, 0.2);
-    margin: 0 10px 10px 0;
-    text-align: center;
-    line-height: 40px;
-    border-radius: 50%;
+    line-height: 40px;/* Somehow this line-height affects the positioning of the icon within the circle container */
+    font-size: 32px;
     color: #ffffff;
+    background-color: var(--black);
+    text-align: center;
+    align-items: center;
+    border-radius: 50%;
     transition: all 0.5s ease;
 }
 
 .social_links a:hover {
     color: black;
     background-color: #0066FF;
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    font-size: 32px;
+    border-radius: 50%;
 }
